--- a/Project.toml
+++ b/Project.toml
@@ -9,5 +9,7 @@ ImageMorphology = "787d08f9-d448-5407-9aad-5290dd7ab264"
 Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
+ReverseDiff = "37e2e3b7-166d-5795-8a7a-e32c996b4267"
 SimpleTraits = "699a6c99-e7fa-54fc-8d76-47d257e15c1d"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
